--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,19 +13,23 @@
 
     <div id="home">
         <div class="inputGroup">
-            <label for="ret1">Retificador #1:</label>
+            <h3>Retificador #1:</h3>
+            <label for="ret1">Voltagem:</label>
             <input disabled type="number" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0">
+            <label for="ret1">Corrente:</label>
             <input disabled type="number" name="ret1" class="monit" id="ret1" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3">
         </div>
-        
+        <hr>
         <div class="inputGroup">
-            <label for="ret1">Retificador #2:</label>
+            <h3>Retificador #2</h3>
+            <label for="ret1">Voltagem:</label>
             <input disabled type="number" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0">
             <input disabled type="number" name="ret2"class="monit" id="ret2" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4">
         </div>
-        
+        <hr>        
         <div class="inputGroup">
-            <label for="ret1">Bateria #1 - Corrente:</label>
+            <h3>Bateria #1:</h3>
+            <label for="ret1">Corrente:</label>
             <input disabled type="number" name="psBatteryCurrent1"class="monit" id="psBatteryCurrent1" data-oid="1.3.6.1.4.1.6302.2.1.2.5.5.1.2.116">
         </div>
     </div>
