--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <div id="home">
         <div class="inputGroup">
             <h3>Retificador #1:</h3>
-            <label for="ret1">Voltagem:</label>
+            <label for="psInputLineAVoltage">Voltagem:</label>
             <input disabled type="number" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0">
             <label for="ret1">Corrente:</label>
             <input disabled type="number" name="ret1" class="monit" id="ret1" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3">
@@ -22,8 +22,9 @@
         <hr>
         <div class="inputGroup">
             <h3>Retificador #2</h3>
-            <label for="ret1">Voltagem:</label>
+            <label for="psInputLineBVoltage">Voltagem:</label>
             <input disabled type="number" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0">
+            <label for="ret2">Corrente:</label>
             <input disabled type="number" name="ret2"class="monit" id="ret2" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4">
         </div>
         <hr>        
