--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,25 +13,43 @@
 
     <div id="home">
         <div class="inputGroup">
+            <h3>Geral:</h3>
+
+            <!-- <label for="systemUptime">Uptime:</label> -->
+            <!-- <input disabled type="number" name="systemUptime" class="monit" id="systemUptime" data-oid="1.3.6.1.2.1.1.3.0"data-fixed=2> -->
+            
+            <label for="systemCurrent">Corrent:</label>            
+            <input disabled type="number" name="systemCurrent" class="monit" id="systemCurrent" data-oid="1.3.6.1.4.1.6302.2.1.2.3.0"data-fixed=2>
+        </div>
+        <hr>
+        <div class="inputGroup">
             <h3>Retificador #1:</h3>
             <label for="psInputLineAVoltage">Voltagem:</label>
-            <input disabled type="number" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0">
+
+            <input disabled type="number" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0"data-fixed=2>
             <label for="ret1">Corrente:</label>
-            <input disabled type="number" name="ret1" class="monit" id="ret1" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3">
+
+            <input disabled type="number" name="ret1" class="monit" id="ret1" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3"data-fixed=2>
         </div>
         <hr>
         <div class="inputGroup">
             <h3>Retificador #2</h3>
             <label for="psInputLineBVoltage">Voltagem:</label>
-            <input disabled type="number" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0">
+
+            <input disabled type="number" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0"data-fixed=2>
             <label for="ret2">Corrente:</label>
-            <input disabled type="number" name="ret2"class="monit" id="ret2" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4">
+
+            <input disabled type="number" name="ret2"class="monit" id="ret2" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4"data-fixed=2>
         </div>
         <hr>        
         <div class="inputGroup">
             <h3>Bateria #1:</h3>
-            <label for="ret1">Corrente:</label>
-            <input disabled type="number" name="psBatteryCurrent1"class="monit" id="psBatteryCurrent1" data-oid="1.3.6.1.4.1.6302.2.1.2.5.5.1.2.116">
+
+            <label for="psBatteryCurrent1">Corrente:</label>
+            <input disabled type="number" name="psBatteryCurrent1"class="monit" id="psBatteryCurrent1" data-oid="1.3.6.1.4.1.6302.2.1.2.5.5.1.2.116"data-fixed=2>
+            
+            <label for="psBatteryCapacity">Porcentagem:</label>
+            <input disabled type="number" name="psBatteryCapacity"class="monit" id="psBatteryCapacity" data-oid="1.3.6.1.4.1.6302.2.1.2.5.3.0" data-fixed=2>
         </div>
     </div>
 
