--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
             <!-- <label for="systemUptime">Uptime:</label> -->
             <!-- <input disabled type="number" name="systemUptime" class="monit" id="systemUptime" data-oid="1.3.6.1.2.1.1.3.0"data-fixed=2> -->
             
-            <label for="systemCurrent">Corrent:</label>            
+            <label for="systemCurrent">Corrente:</label>            
             <input disabled type="number" name="systemCurrent" class="monit" id="systemCurrent" data-oid="1.3.6.1.4.1.6302.2.1.2.3.0"data-fixed=2>
         </div>
         <hr>
