--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div id="home">
+       <div id="wrap">
         <div class="inputGroup">
             <h3>Geral:</h3>
 
@@ -51,6 +52,7 @@
             <label for="psBatteryCapacity">Porcentagem:</label>
             <input disabled type="number" name="psBatteryCapacity"class="monit" id="psBatteryCapacity" data-oid="1.3.6.1.4.1.6302.2.1.2.5.3.0" data-fixed=2>
         </div>
+       </div>
     </div>
 
     <script src="./js/app.js"></script>
