--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,47 +12,53 @@
 <body>
 
     <div id="home">
-       <div id="wrap">
-        <div class="inputGroup">
-            <h3>Geral:</h3>
+        <div id="wrap">
+            <div class="inputGroup">
+                <h3>Geral:</h3>
 
-            <!-- <label for="systemUptime">Uptime:</label> -->
-            <!-- <input disabled type="number" name="systemUptime" class="monit" id="systemUptime" data-oid="1.3.6.1.2.1.1.3.0"data-fixed=2> -->
-            
-            <label for="systemCurrent">Corrente:</label>            
-            <input disabled type="number" name="systemCurrent" class="monit" id="systemCurrent" data-oid="1.3.6.1.4.1.6302.2.1.2.3.0"data-fixed=2>
+                <!-- <label for="systemUptime">Uptime:</label> -->
+                <!-- <input disabled type="text" name="systemUptime" class="monit" id="systemUptime" data-oid="1.3.6.1.2.1.1.3.0"data-fixed=2 data-unidade="V" data-mult=0.001> -->
+
+                <label for="systemCurrent">Corrente:</label>
+                <input disabled type="text" name="systemCurrent" class="monit" id="systemCurrent"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.3.0" data-fixed=2 data-unidade="A" data-mult=0.001>
+            </div>
+            <hr>
+            <div class="inputGroup">
+                <h3>Retificador #1:</h3>
+                <label for="psInputLineAVoltage">Voltagem:</label>
+
+                <input disabled type="text" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0" data-fixed=2 data-unidade="V" data-mult=0.001>
+                <label for="ret1">Corrente:</label>
+
+                <input disabled type="text" name="ret1" class="monit" id="ret1"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3" data-fixed=2 data-unidade="A" data-mult=0.001>
+            </div>
+            <hr>
+            <div class="inputGroup">
+                <h3>Retificador #2</h3>
+                <label for="psInputLineBVoltage">Voltagem:</label>
+                <input disabled type="text" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0" data-fixed=2 data-unidade="V" data-mult=0.001>
+
+                <label for="ret2">Corrente:</label>
+                <input disabled type="text" name="ret2" class="monit" id="ret2"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4" data-fixed=2 data-unidade="A" data-mult=0.001>
+            </div>
+            <hr>
+            <div class="inputGroup">
+                <h3>Bateria #1:</h3>
+
+                <label for="psBatteryCurrent1">Corrente:</label>
+                <input disabled type="text" name="psBatteryCurrent1" class="monit" id="psBatteryCurrent1"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.5.5.1.2.116" data-fixed=2 data-unidade="A" data-mult=0.001>
+
+                <label for="psBatteryCapacity">Capacidade:</label>
+                <input disabled type="text" name="psBatteryCapacity" class="monit" id="psBatteryCapacity"
+                    data-oid="1.3.6.1.4.1.6302.2.1.2.5.3.0" data-fixed=0 data-unidade="%" data-mult=0.001>
+            </div>
         </div>
-        <hr>
-        <div class="inputGroup">
-            <h3>Retificador #1:</h3>
-            <label for="psInputLineAVoltage">Voltagem:</label>
-
-            <input disabled type="number" name="psInputLineAVoltage" class="monit" id="psInputLineAVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.1.0"data-fixed=2>
-            <label for="ret1">Corrente:</label>
-
-            <input disabled type="number" name="ret1" class="monit" id="ret1" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.3"data-fixed=2>
-        </div>
-        <hr>
-        <div class="inputGroup">
-            <h3>Retificador #2</h3>
-            <label for="psInputLineBVoltage">Voltagem:</label>
-
-            <input disabled type="number" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage" data-oid="1.3.6.1.4.1.6302.2.1.2.6.2.0"data-fixed=2>
-            <label for="ret2">Corrente:</label>
-
-            <input disabled type="number" name="ret2"class="monit" id="ret2" data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.4"data-fixed=2>
-        </div>
-        <hr>        
-        <div class="inputGroup">
-            <h3>Bateria #1:</h3>
-
-            <label for="psBatteryCurrent1">Corrente:</label>
-            <input disabled type="number" name="psBatteryCurrent1"class="monit" id="psBatteryCurrent1" data-oid="1.3.6.1.4.1.6302.2.1.2.5.5.1.2.116"data-fixed=2>
-            
-            <label for="psBatteryCapacity">Porcentagem:</label>
-            <input disabled type="number" name="psBatteryCapacity"class="monit" id="psBatteryCapacity" data-oid="1.3.6.1.4.1.6302.2.1.2.5.3.0" data-fixed=2>
-        </div>
-       </div>
     </div>
 
     <script src="./js/app.js"></script>
