--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,12 +49,12 @@
             <hr>
             <div class="inputGroup">
                 <h3>Retificador #3</h3>
-                <label for="psInputLineBVoltage">Voltagem:</label>
-                <input disabled type="text" name="psInputLineBVoltage" class="monit" id="psInputLineBVoltage"
+                <label for="psInputLineCVoltage">Voltagem:</label>
+                <input disabled type="text" name="psInputLineCVoltage" class="monit" id="psInputLineCVoltage"
                     data-oid="1.3.6.1.4.1.6302.2.1.2.6.3.0" data-fixed=2 data-unidade="V" data-mult=0.001>
 
-                <label for="ret2">Corrente:</label>
-                <input disabled type="text" name="ret2" class="monit" id="ret2"
+                <label for="ret3">Corrente:</label>
+                <input disabled type="text" name="ret3" class="monit" id="ret3"
                     data-oid="1.3.6.1.4.1.6302.2.1.2.11.4.1.6.5" data-fixed=2 data-unidade="A" data-mult=0.001>
             </div>
             <hr>
